--- a/src/components/ListUsers/ListUsers.css
+++ b/src/components/ListUsers/ListUsers.css
@@ -11,3 +11,36 @@
   justify-content: center;
   list-style: none;
 }
+.dvPagination {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px;
+  margin-left: 60px;
+  margin-right: 60px;
+  margin-top: 60px;
+  padding-bottom: 50px;
+}
+.dvPagination button {
+  width: 45px;
+  height: 45px;
+  border-radius: 4px;
+  border: none;
+  background: #bdbdbd;
+  color: black;
+}
+.dvPagination button:hover {
+  color: white;
+  background-color: #d85d5d;
+}
+.dvPagination select {
+  width: 60px;
+  height: 45px;
+  border: 1px solid #bdbdbd;
+  border-radius: 4px;
+  text-align-last: center;
+  outline: none;
+}
+.dvPagination option {
+  text-align: center;
+}
